--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="profs" id="home">
                 <div class="row">
                     <div class="img_side col-md-6">
-                        <img class="profile_img" src="images/profile.jpg" alt="" />
+                        <img class="profile_img" src="profile.jpg" alt="" />
                     </div>
                     <div class="col-md-6">
                         <h2 class="prof_title">Web Developer</h2>
